update report bug link

--- a/tools/site/codelabs/homosplitlearning/index.html
+++ b/tools/site/codelabs/homosplitlearning/index.html
@@ -25,7 +25,7 @@
                   id="homosplitlearning"
                   title="Homo - SplitLearning"
                   environment="web"
-                  feedback-link="https://github.com/1286482110/InspiringGroup-Codelab/issues">
+                  feedback-link="https://github.com/InspiringGroupCodelabs/InspiringGroupCodelabs.github.io/issues">
     
       <google-codelab-step label="Codelab Overview" duration="1">
         <p>接下来，本文档将以 MNIST 手写数字识别分类任务为例，通过 Pytorch 上的一些简单的代码为你讲解 SplitLearning 架构在横向联邦学习中的训练流程</p>
